[gd_scene load_steps=2 format=3 uid="uid://e81cpd5cgpw1"]

[ext_resource type="Script" uid="uid://buga1um1s0cyf" path="res://examples/space_shooter/scripts/ship_selection_ui.gd" id="1"]

[node name="ShipSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT YOUR SHIP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ShipName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ship Name"
horizontal_alignment = 1

[node name="ShipSprite" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ship description goes here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NavigationContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/NavigationContainer"]
layout_mode = 2
text = "< PREV"

[node name="Spacer" type="Control" parent="VBoxContainer/NavigationContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer/NavigationContainer"]
layout_mode = 2
text = "NEXT >"

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START GAME"
